--- a/styles/w1000.css
+++ b/styles/w1000.css
@@ -45,10 +45,24 @@
 
   #date {
     display: block;
-    margin-top: 0.8rem;
     width: 100%;
     text-transform: uppercase;
-    font-size: 21px;
+    font-size: 18px;
+    margin-bottom: 1em;
+  }
+
+  #secondarynav {
+    text-align: left;
+    margin-top: 0;
+  }
+
+  #secondarynav a {
+    line-height: 1.75em;
+  }
+
+  #secondarynav li.social a {
+    margin-left: 0;
+    margin-right: 10px;
   }
 
   #what-you-get li {
@@ -263,6 +277,8 @@
     float: none;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    margin-right: 200px;
+    text-align: left;
   }
 
   #buy {
